@@ -1037,73 +1037,6 @@ receiver::status receiver::stop_iq_recording()
 }
 
 
-/*! \brief Start playback of recorded I/Q data file.
- *  \param filename The file to play from. Must be raw file containing gr_complex samples.
- *  \param samprate The sample rate (currently fixed at 96ksps)
- */
-receiver::status receiver::start_iq_playback(const std::string filename, float samprate)
-{
-    (void) filename;
-    (void) samprate;
-#if 0
-    if (samprate != d_bandwidth) {
-        return STATUS_ERROR;
-    }
-
-    try {
-        iq_src = gr_make_file_source(sizeof(gr_complex), filename.c_str(), false);
-    }
-    catch (std::runtime_error &e) {
-        std::cout << "Error loading " << filename << ": " << e.what() << std::endl;
-        return STATUS_ERROR;
-    }
-
-    tb->lock();
-
-    /* disconenct hardware source */
-    tb->disconnect(src, 0, nb, 0);
-    tb->disconnect(src, 0, iq_sink, 0);
-
-    /* connect I/Q source via throttle block */
-    tb->connect(iq_src, 0, nb, 0);
-    tb->connect(iq_src, 0, iq_sink, 0);
-    tb->unlock();
-#endif
-    return STATUS_OK;
-}
-
-
-/*! \brief Stop I/Q data file playback.
- *  \return STATUS_OK
- *
- * This method will stop the I/Q data playback, disconnect the file source and throttle
- * blocks, and reconnect the hardware source.
- *
- * FIXME: will probably crash if we try to stop playback that is not running.
- */
-receiver::status receiver::stop_iq_playback()
-{
-#if 0
-    tb->lock();
-
-    /* disconnect I/Q source and throttle block */
-    tb->disconnect(iq_src, 0, nb, 0);
-    tb->disconnect(iq_src, 0, iq_sink, 0);
-
-    /* reconenct hardware source */
-    tb->connect(src, 0, nb, 0);
-    tb->connect(src, 0, iq_sink, 0);
-
-    tb->unlock();
-
-    /* delete iq_src since we can not reuse for other files */
-    iq_src.reset();
-#endif
-    return STATUS_OK;
-}
-
-
-
 /*! \brief Start data sniffer.
  *  \param buffsize The buffer that should be used in the sniffer.
  *  \return STATUS_OK if the sniffer was started, STATUS_ERROR if the sniffer is already in use.
